--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,14 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+
+//   "paths": {
+//     "rxjs": [
+//       "node_modules/rxjs"
+//     ],
+//     "rxjs/*": [
+//       "node_modules/rxjs/*"
+//     ]
+// },
 }
